# PpgeDashboardCetelliUfam

./: .replit  README_KPIS.md  analyze_xlsx.py  app.py  gerar_html.py  pyproject.toml  replit.md
.streamlit/: config.toml
attached_assets/: 00-MAIN-DATA-SUCUPIRA-dash.xlsx  00-MAIN-DATA-SUCUPIRA-v14.csv  00-MAIN-DATA-SUCUPIRA-v14.xlsx  Pasted-Com-base-nas-fontes-fornecidas-a-avalia-o-do-programa-de-Engenharias-IV-pela-CAPES-utiliza-uma-s-r-1747775910415.txt  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-text-input-elements-with-the-same-a-1746674854935.txt  professores.xlsx
components/: batch_import.py  capes_kpis.py  charts.py  chat_assistant.py  data_editor.py  data_import.py  filters.py  kpi_cards.py  reports.py  sidebar.py
data/: data_manager.py  sample_data.py
pages/: 1_🏫_Desempenho_do_Programa.py  2_📝_Gerador_de_Relatorios.py  3_⚙️_Gerenciamento_de_Dados.py  4_👨‍🎓_Metricas_dos_Estudantes.py  5_👨‍🏫_Metricas_dos_Docentes.py  6_➕_Adicionar_Estudante.py
pages_backup/: data_management.py  faculty_metrics.py  overview.py  program_performance.py  report_generator.py  student_metrics.py
pages_removed/: 2_👨‍🏫_Metricas_dos_Docentes.py
utils/: auth.py  calculations.py  database.py  export.py  kpi_calculations.py  translations.py
