[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.40.1",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "reportlab>=4.4.0",
    "streamlit>=1.45.0",
]
